# CrownyTVM

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FOUNDRY_DEV_GUIDE.md  README.md  bank-system.js  cell-core.js  codegen.rs  ecosystem.config.js  engine.rs  install.sh  isa729코드젠.han  mail-setup.sh  main.rs  nginx-crowny.conf  package.json  parser.rs  server.js  setup-nginx.sh  stage7_seed.han  token.rs  trit.rs  watchdog.sh  구문.rs  쉘.한선씨  쉘3.한선씨  시드생성.han  핵심.rs
CrownyCell/: README.md  저장소.han  크라우니셀.han
CrownyCell02/: README.md  stage6_no_rust.han
CrownyOSPack/: README.md  install.bat  install.ps1  install.sh  uninstall.sh  크라우니OS.han
CrownyStage07/: README.md  stage7_bootstrap.han  메모리.han  바이트코드.han  시드생성.han
CrownyTVM02/: README.md  stage1_demo.han  배열.han
CrownyTVM03/: README.md  codegen.rs  engine.rs  한선VM.han
CrownyTVM04/: README.md  한선렉서.han  한선코드젠.han
CrownyTVM05/: README.md  TritFS.han  stage4_demo.han  커널.han
CrownyTVM_HSS/: README.md  stage5_native.han  한선기계어.han
ISA729VM/: isa729vm.han
baremetal/: Makefile  crowny.db  linker.ld
chain/: adapter.js  block.js  cell.js  compact.js  consensus.js  contract.js  crypto.js  deploy.js  genesis.js  index.js  indexer.js  p2p.js  producer.js  state.js  storage.js  ternary.js  transaction.js
chat-server/: chat-store.js  index.js  ws-server.js
crownycode/: CLAUDE.md  Cargo.toml  build.rs  crownycode.toml  setup_crownycode.sh
crownycode/.cargo/: config.toml
crownycode/docs/: NEXT_STEPS.md
crownycode/scripts/: build_rpi4.sh
crownycode/src/: cli.rs  color.rs  config_parser.rs  error.rs  i18n.rs  lib.rs  main.rs  seed.rs  serial.rs  template.rs  time_util.rs
crownycode/src/cell/: mod.rs  net.rs  signal.rs  store.rs
crownycode/src/crownycore/: energy.rs  merge.rs  mod.rs  reason.rs  split.rs
crownycode/src/developer/: level.rs  mod.rs  profile.rs  store.rs
crownycode/src/gateway/: contribute.rs  mod.rs  quota.rs
crownycode/src/isa729/: assembler.rs  codegen.rs  instr.rs  mod.rs  regalloc.rs  vm.rs
crownycode/src/learn/: claude.rs  mod.rs
crownycode/src/offline/: mod.rs  snapshot.rs
crownycode/src/os/: mod.rs  syscall.rs
crownycode/src/phase/: judge.rs  mod.rs  signals.rs
crownycode/src/pipeline/: ir.rs  kps_old.rs  mod.rs
crownycode/src/pipeline/codegen/: crowny.rs  javascript.rs  mod.rs  python.rs  rust.rs
crownycode/src/pipeline/kps/: adapter.rs  en.rs  hi.rs  ko.rs  mod.rs  pt_br.rs  sw.rs
crownycode/tests/: bench_test.rs  integration_test.rs  phase1_test.rs  phase2_test.rs  phase3_test.rs  phase4_test.rs
docs/: PRODUCTION-PLAN.md  TRADING-VM-HANDOFF.md  (+1 more)
(+236 files in other folders)
