[package]
name = "crownycode"
version = "0.1.0"
edition = "2021"
description = "CrownyOS native AI code engine — Phase 0"
authors = ["CrownyOS Project"]

[[bin]]
name = "crownycode"
path = "src/main.rs"

[dependencies]
# Claude API (optional — only for learning mode)
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[profile.release]
opt-level = 3
strip = true

[lib]
name = "crownycode"
path = "src/lib.rs"

# RPi4 최적화 프로파일 — 바이너리 크기 최소화 + ARMv8 최적화
[profile.release-rpi4]
inherits = "release"
opt-level = "s"          # 크기 최적화 (성능 대신 용량 절약)
strip = true             # 심볼 제거
lto = true               # 링크 타임 최적화
codegen-units = 1        # 단일 코드 유닛 (더 작은 바이너리)
panic = "abort"          # 패닉 시 즉시 종료 (unwinding 코드 제거)

[features]
default = ["claude"]
claude = ["dep:tokio", "dep:reqwest", "dep:serde", "dep:serde_json"]
